@@ -2,6 +2,7 @@
 \Rdversion{1.1}
 \alias{HR}
 \alias{ppsmat}
+\alias{ppscov}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{Wrappers for specifying PPS designs}
 \description{
@@ -9,7 +10,8 @@ The Horvitz-Thompson estimator and the Hartley-Rao approximation require informa
 }
 \usage{
 HR(psum=NULL, strata = NULL)
-ppsmat(jointprob, tolerance = 1e-04) 
+ppsmat(jointprob, tolerance = 1e-04)
+ppscov(probcov, weighted=FALSE)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -20,9 +22,11 @@ Stratum labels, of the same length as \code{psum}, if \code{psum} is a vector
 }
 \item{jointprob}{Matrix of pairwise sampling probabilities for the sampled individuals}
 \item{tolerance}{Tolerance for deciding that the covariance of sampling indicators is zero}
+\item{probcov}{Covariance of the sampling indicators (often written 'Delta'), or weighted covariance if \code{weighted=TRUE}}
+\item{weighted}{If \code{TRUE}, the \code{probcov} argument is the covariance divided by pairwise sampling probabilities}
 }
 \value{
-An object of class \code{HR} or \code{ppsmat}, suitable for supplying as the \code{pps} argument to \code{\link{svydesign}}.
+An object of class \code{HR},\code{ppsmat}, \code{ppsdelta}, or \code{ppsdcheck} suitable for supplying as the \code{pps} argument to \code{\link{svydesign}}.
 }
 
 \seealso{
